--- a/main.css
+++ b/main.css
@@ -3,10 +3,15 @@ html, body {
     margin: 0;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
 .remote-container {
-    
-    width: 50px;
+
     height: 100%;
+    aspect-ratio: 9/16;
 
     background-color: green;
 }
