--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 .remote-container {
 
     height: 100%;
-    aspect-ratio: 9/16;
+    aspect-ratio: 0.5625;
 
     background-color: green;
 }
