--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 html, body {
+    width: 100%;
     height: 100%;
     margin: 0;
 }
@@ -10,8 +11,14 @@ body {
 
 .remote-container {
 
-    height: 100%;
+    position: fixed;
+
+    height: calc(100% - 2rem);
     aspect-ratio: 0.5625;
+
+    margin-top: 1rem;
+
+    
 
     background-color: green;
 }
