--- a/main.css
+++ b/main.css
@@ -10,15 +10,10 @@ body {
 }
 
 .remote-container {
-
     position: fixed;
 
-    height: calc(100% - 2rem);
+    height: 100%;
     aspect-ratio: 0.5625;
-
-    margin-top: 1rem;
-
-    
 
     background-color: green;
 }
