--- a/main.css
+++ b/main.css
@@ -16,8 +16,15 @@ body {
 .remote-container {
     position: fixed;
 
-    height: 100%;
+    height: calc(100% - 4rem);
     aspect-ratio: 0.5625;
+
+    padding: 2rem;
+}
+
+.remote {
+    width: 100%;
+    height: 100%;
 
     background-color: green;
 }
