--- a/main.css
+++ b/main.css
@@ -1,30 +1,37 @@
 html, body {
-    width: 100%;
     height: 100%;
     margin: 0;
-}
-
-body {
-    display: flex;
-    justify-content: center;
 }
 
 .rounded-corners {
     border-radius: 2rem;
 }
 
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .remote-container {
     position: fixed;
-
-    height: calc(100% - 4rem);
+    height: 100%;
     aspect-ratio: 0.5625;
-
-    padding: 2rem;
+}
+@media (max-aspect-ratio: 9/16) {
+    .remote-container {
+        height: initial;
+        width: 100%;
+    }
 }
 
 .remote {
-    width: 100%;
-    height: 100%;
+    position: relative;
 
-    background-color: green;
+    width: calc(100% - 2rem);
+    height: calc(100% - 2rem);
+    margin-top: 1rem;
+    margin-left: 1rem;
+
+    background-color: rgb(240,240,240);
 }
