--- a/main.css
+++ b/main.css
@@ -1,10 +1,22 @@
+:root {
+    --color0: rgb(35, 35, 35);
+    --color1: rgb(240, 240, 240);
+
+    --color-off: rgb(156, 156, 156);
+    --color-on: rgb(86, 201, 105);
+
+    --row-height: 12%;
+}
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
     margin: 0;
-}
 
-.rounded-corners {
-    border-radius: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 body {
@@ -13,10 +25,32 @@ body {
     justify-content: center;
 }
 
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.25);
+
+    z-index: 1;
+}
+.loading-container p {
+    color: var(--color0);
+    font-size: 1.5rem;
+    text-align: center;
+}
+
 .remote-container {
     position: fixed;
     height: 100%;
     aspect-ratio: 0.5625;
+
+    padding: 1rem;
 }
 @media (max-aspect-ratio: 9/16) {
     .remote-container {
@@ -26,12 +60,27 @@ body {
 }
 
 .remote {
+    display: flex;
+    flex-direction: column;
+
     position: relative;
 
-    width: calc(100% - 2rem);
-    height: calc(100% - 2rem);
-    margin-top: 1rem;
-    margin-left: 1rem;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
 
-    background-color: rgb(240,240,240);
+    background-color: var(--color1);
+}
+
+.button-row {
+    width: 100%;
+    height: var(--row-height);
+    margin-bottom: 1rem;
+}
+
+.hidden {
+    display: none;
+}
+.rounded-corners {
+    border-radius: 2rem;
 }
