--- a/components.css
+++ b/components.css
@@ -3,11 +3,13 @@
     aspect-ratio: 1;
     border-radius: 100%;
 
-    background-color: var(--color4);
-    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color7);
+    background-color: var(--color-indicator-off);
+    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color-innerglow);
+
+    transition: background-color 0.1s ease-in-out;
 }
 #indicator_led.lit{
-    background-color: var(--color6);
+    background-color: var(--color-indicator-lit);
 }
 
 #remote_name {
@@ -18,15 +20,17 @@
     padding: 0.5rem;
     padding-left: 1rem;
     padding-right: 2rem;
-    background-color: var(--color2);
     border-radius: 0.75rem;
+
+    background-color: var(--color-name-background);
+    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color-innerglow);
 
     transform: translateX(1.5rem);
     margin-left: -1.5rem;
 }
 
 #power_button {
-    width: 50%;
+    width: 40%;
     height: 100%;
     z-index: 1;
 }
@@ -34,8 +38,8 @@
 .toggle {
     padding: 0.5rem;
     border-radius: 23%/50%;
-    background-color: var(--color4);
-    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color7);
+    background-color: var(--color-power-toggle-off);
+    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color-innerglow);
     transition: background-color 0.1s ease-in-out;
 }
 .toggle .circle {
@@ -54,12 +58,15 @@
     color: var(--color3);
 }
 .toggle.on {
-    background-color: var(--color5);
+    background-color: var(--color-power-toggle-on);
 }
 .toggle.on .circle {
     margin-left: 100%;
     transform: translateX(-100%);
 }
+
+
+
 
 .switches {
     display: flex;
@@ -78,11 +85,12 @@
 
     border-radius: 0.5rem;
 
-    background-color: var(--color2);
-    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color7);
+    background-color: var(--color-button-off);
+    box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color-innerglow);
+    transition: background-color 0.1s ease-in-out;
 }
 .switch.on {
-    background-color: var(--color5);
+    background-color: var(--color-button-on);
 }
 .switch:first-child {
     margin-left: 0;
@@ -95,4 +103,5 @@
     margin: 0;
     text-align: center;
     font-size: 0.7rem;
+    
 }
