--- a/spinner.css
+++ b/spinner.css
@@ -9,7 +9,7 @@
     position: absolute;
     width: 6px;
     height: 6px;
-    background: var(--color0);
+    background: var(--color-text);
     border-radius: 50%;
     animation: lds-default 1.2s linear infinite;
 }
