--- a/components.css
+++ b/components.css
@@ -30,14 +30,14 @@
 }
 
 #power_button {
-    width: 40%;
+    width: 50%;
     height: 100%;
     z-index: 1;
 }
 
 .toggle {
     padding: 0.5rem;
-    border-radius: 23%/50%;
+    border-radius: var(--row-height);
     background-color: var(--color-power-toggle-off);
     box-shadow: inset 0 0 var(--glow-size) var(--glow-size) var(--color-innerglow);
     transition: background-color 0.1s ease-in-out;
