--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ body {
     background-color: var(--color-background);
 }
 
-.loading-container {
+.screen-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -79,7 +79,7 @@ body {
 
     z-index: 1;
 }
-.loading-container p {
+.screen-container p {
     color: var(--color-text);
     font-size: 1.5rem;
     text-align: center;
